<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trip"
        android:padding="@dimen/activity_horizontal_margin"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:textStyle="bold">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin">

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/very_near_destination"
            android:text="@string/one"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"/>

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/medium_destination"
            android:text="@string/two"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin">

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/near_destination"
            android:text="@string/three"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"/>

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/far_destination"
            android:text="@string/four"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/five"
        android:padding="@dimen/activity_horizontal_margin"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/activity_horizontal_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:id="@+id/budget_seekbar"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:id="@+id/budget_value"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Continue"
        android:id="@+id/budget_done"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:foreground="?android:attr/selectableItemBackground"/>
</LinearLayout>