<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:padding="@dimen/activity_horizontal_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight"
            android:textSize="16sp"
            android:layout_gravity="center"/>

        <RatingBar android:id="@+id/rating_relax"
            android:theme="@style/RatingBar"
            android:rating="2.5"
            android:stepSize="0.5"
            android:numStars="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:text="@string/nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_horizontal_margin"/>

        <RatingBar android:id="@+id/rating_adventure"
            android:theme="@style/RatingBar"
            android:rating="2.5"
            android:stepSize="0.5"
            android:numStars="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:text="@string/ten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_horizontal_margin"/>

        <RatingBar android:id="@+id/rating_culture"
            android:theme="@style/RatingBar"
            android:rating="2.5"
            android:stepSize="0.5"
            android:numStars="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:text="@string/eleven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_horizontal_margin"/>

        <RatingBar
            android:theme="@style/RatingBar"
            android:id="@+id/rating_social"
            android:rating="2.5"
            android:stepSize="0.5"
            android:numStars="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Continue"
        android:id="@+id/rating_done"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:foreground="?android:attr/selectableItemBackground"/>
</LinearLayout>